kb: add/update topics java-fundamentals, oop-principles-in-java, jvm-internals-and-class-loading, garbage-collection-algorithms, multithreading-and-concurrency-in-java