@@ -1,174 +1,186 @@
 ---
 title: Garbage Collection Algorithms
-aliases: []
-tags: [#java,#gc]
+aliases: [GC Algorithms, Java Garbage Collection]
+tags: [#java,#jvm,#performance]
 created: 2025-09-25
 updated: 2025-09-25
 ---
 
-# Overview
+# Garbage Collection Algorithms
 
-Garbage Collection (GC) Algorithms in Java automatically manage memory by identifying and reclaiming heap space occupied by unreachable objects. These algorithms are crucial for JVM performance, minimizing memory leaks, and optimizing latency in applications. Key algorithms include mark-sweep, generational, concurrent mark-sweep (CMS), and Garbage-First (G1), each balancing throughput, latency, and memory footprint.
+## Overview
 
-# Detailed Explanation
+Garbage Collection (GC) is the process of automatically reclaiming memory occupied by objects that are no longer in use. Java provides several GC algorithms with different trade-offs in terms of throughput, latency, and memory usage.
 
-## Core Concepts
+## Detailed Explanation
 
-GC algorithms operate on the heap, divided into young and old generations. Objects start in the young generation (Eden space) and are promoted to old if they survive collections. Roots include static variables, local variables, and active threads.
+### Basic GC Concepts
 
-### Mark-Sweep Algorithm
+- **Reachability**: An object is reachable if it can be accessed through a chain of references from GC roots
+- **GC Roots**: Static variables, local variables in stack frames, JNI references
+- **Generational Hypothesis**: Most objects die young, few objects survive long
 
-- **Mark Phase**: Traverse from GC roots to mark reachable objects.
-- **Sweep Phase**: Reclaim memory from unmarked objects, leaving fragmentation.
-
-Pros: Simple. Cons: Fragmentation, pauses.
-
-### Mark-Sweep-Compact
-
-Adds a compact phase to move live objects together, eliminating fragmentation.
+### Heap Structure
 
 ```mermaid
 graph TD
-    A[Start GC] --> B[Mark Reachable]
-    B --> C[Sweep Unreachable]
-    C --> D[Compact Live Objects]
-    D --> E[End GC]
+    A[Heap] --> B[Young Generation]
+    A --> C[Old Generation]
+    A --> D[Metaspace/PermGen]
+    
+    B --> E[Eden]
+    B --> F[Survivor 0]
+    B --> G[Survivor 1]
 ```
+
+### Major GC Algorithms
+
+#### Mark-Sweep
+
+**Process:**
+1. Mark: Traverse object graph from GC roots, mark reachable objects
+2. Sweep: Reclaim memory of unmarked objects
+
+**Pros:** Simple, low pause times for marking
+**Cons:** Fragmentation, sweep phase can be slow
+
+#### Mark-Compact
+
+**Process:**
+1. Mark reachable objects
+2. Compact: Move surviving objects to eliminate fragmentation
+
+**Pros:** No fragmentation
+**Cons:** Higher pause times due to compaction
+
+#### Copying Collection
+
+**Process:**
+1. Divide heap into two equal spaces (from-space and to-space)
+2. Copy live objects from from-space to to-space
+3. Swap spaces
+
+**Pros:** Fast allocation, no fragmentation
+**Cons:** Wastes half the heap space
 
 ### Generational GC
 
-Assumes most objects die young. Young generation uses copy collection; old uses mark-sweep-compact.
+Combines different algorithms for different generations:
 
-- **Minor GC**: Collects young generation.
-- **Major/Full GC**: Collects entire heap.
+- **Minor GC**: Copying collection in Young Generation
+- **Major GC**: Mark-sweep or mark-compact in Old Generation
 
-### Concurrent Mark-Sweep (CMS)
+### Advanced GC Algorithms
 
-Runs marking concurrently with application threads to reduce pauses. No compaction, leading to fragmentation.
+#### G1 (Garbage First)
 
-Phases: Initial mark, concurrent mark, remark, concurrent sweep.
-
-### Garbage-First (G1)
-
-Divides heap into regions, collects garbage-rich regions first. Balances pauses and throughput.
-
-Phases: Young collection, mixed collection, concurrent marking.
-
-### Other Algorithms
-
-- **Serial GC**: Single-threaded, for small heaps.
-- **Parallel GC**: Multi-threaded young and old collections for throughput.
-- **ZGC/Shenandoah**: Low-latency, concurrent, for large heaps (Java 11+).
-
-| Algorithm | JVM Flags | Pros | Cons | Best For |
-|-----------|-----------|------|------|----------|
-| Serial | `-XX:+UseSerialGC` | Low overhead | Long pauses | Small apps, single-threaded |
-| Parallel | `-XX:+UseParallelGC` | High throughput | Pauses | Batch processing |
-| CMS | `-XX:+UseConcMarkSweepGC` | Low latency | Fragmentation, CPU overhead | Web servers |
-| G1 | `-XX:+UseG1GC` | Predictable pauses | Tuning | Large heaps, mixed workloads |
-| ZGC | `-XX:+UseZGC` | Sub-millisecond pauses | Memory overhead | High-performance, large heaps |
+- Divides heap into regions
+- Prioritizes regions with most garbage
+- Aims for predictable pause times
 
 ```mermaid
-graph LR
-    A[Young Generation] --> B[Survivor Space]
-    B --> C[Old Generation]
-    C --> D[Full GC]
+graph TD
+    A[G1 Heap] --> B[Region 1]
+    A --> C[Region 2]
+    A --> D[Region 3]
+    A --> E[Region N]
+    
+    B --> F[Eden]
+    C --> G[Survivor]
+    D --> H[Old]
+    E --> I[Humongous]
 ```
 
-This diagram illustrates object promotion in generational GC.
+#### ZGC (Z Garbage Collector)
 
-# Real-world Examples & Use Cases
+- Concurrent GC with very low pause times
+- Uses colored pointers
+- Handles heaps up to 16TB
 
-- **E-commerce Platforms**: G1 GC for predictable pauses during high traffic, ensuring responsive user experiences.
-- **Financial Trading Systems**: CMS or ZGC to minimize latency in real-time data processing.
-- **Batch Data Processing**: Parallel GC for maximizing throughput in ETL jobs.
-- **Microservices**: G1 in Kubernetes environments for efficient resource utilization.
-- **Embedded/IoT**: Serial GC for constrained devices with limited memory.
+#### Shenandoah
 
-# Code Examples
+- Concurrent evacuation
+- Broker GC pauses
+- Similar to ZGC but different implementation
 
-## Basic GC Monitoring
+## Real-world Examples & Use Cases
+
+1. **High-Throughput Applications**: Use Parallel GC for maximum throughput
+2. **Low-Latency Systems**: Use G1 or ZGC for predictable pauses
+3. **Big Data Processing**: Use large heaps with appropriate GC tuning
+4. **Microservices**: Tune GC for quick startup and low memory footprint
+5. **Gaming Applications**: Use low-pause GC to avoid frame drops
+
+## Code Examples
+
+### GC Monitoring Example
 
 ```java
-public class GCMonitor {
+public class GCMonitoring {
     public static void main(String[] args) {
-        Runtime rt = Runtime.getRuntime();
-        System.out.println("Total memory: " + rt.totalMemory());
-        System.out.println("Free memory: " + rt.freeMemory());
-        System.out.println("Used memory: " + (rt.totalMemory() - rt.freeMemory()));
+        // Add GC logging JVM arguments:
+        // -XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps
         
-        // Suggest GC (not guaranteed)
-        System.gc();
-        System.out.println("After GC - Free memory: " + rt.freeMemory());
+        List<byte[]> list = new ArrayList<>();
+        
+        for (int i = 0; i < 10000; i++) {
+            list.add(new byte[1024]); // 1KB objects
+            
+            if (i % 1000 == 0) {
+                System.out.println("Created " + i + " objects");
+                System.gc(); // Force GC
+            }
+        }
     }
 }
 ```
 
-## Using Weak References
+### Memory Leak Detection
 
 ```java
-import java.lang.ref.WeakReference;
-
-public class WeakReferenceExample {
+public class MemoryLeakDemo {
+    static List<Object> leakList = new ArrayList<>();
+    
     public static void main(String[] args) {
-        Object strongRef = new Object();
-        WeakReference<Object> weakRef = new WeakReference<>(strongRef);
+        // JVM arguments for heap dump on OOM:
+        // -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./heapdump.hprof
         
-        System.out.println("Strong ref: " + strongRef);
-        System.out.println("Weak ref: " + weakRef.get());
-        
-        strongRef = null; // Remove strong reference
-        System.gc(); // Suggest GC
-        
-        System.out.println("After GC - Weak ref: " + weakRef.get()); // Likely null
+        while (true) {
+            leakList.add(new byte[1024 * 1024]); // 1MB objects
+            
+            try {
+                Thread.sleep(100);
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        }
     }
 }
 ```
 
-## Tuning G1 GC
+## Tools & Libraries
 
-```bash
-# Run JVM with G1, set max pause time to 200ms, heap 4GB
-java -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -Xmx4g -Xms4g MyApp
-```
+- **VisualVM**: GUI tool for monitoring JVM and GC
+- **JConsole**: Built-in monitoring tool
+- **GCViewer**: Analyze GC logs
+- **Async Profiler**: Low-overhead profiling including GC
 
-## Custom Reference Types
+## Common Pitfalls & Edge Cases
 
-```java
-import java.lang.ref.SoftReference;
-import java.lang.ref.PhantomReference;
-import java.lang.ref.ReferenceQueue;
+1. **Memory Leaks**: Objects held by static references
+2. **GC Pauses**: Long pauses in latency-sensitive applications
+3. **Heap Sizing**: Incorrect Xmx/Xms settings
+4. **Reference Types**: Soft/weak references affecting GC behavior
+5. **Finalizers**: Blocking GC, use Cleaner API instead
 
-public class ReferenceTypesExample {
-    public static void main(String[] args) {
-        Object obj = new Object();
-        
-        // Soft reference - cleared before OOM
-        SoftReference<Object> softRef = new SoftReference<>(obj);
-        
-        // Phantom reference - for cleanup
-        ReferenceQueue<Object> queue = new ReferenceQueue<>();
-        PhantomReference<Object> phantomRef = new PhantomReference<>(obj, queue);
-        
-        obj = null;
-        System.gc();
-        
-        System.out.println("Soft ref: " + softRef.get());
-        System.out.println("Phantom ref enqueued: " + (queue.poll() != null));
-    }
-}
-```
+## References
 
-# References
+- [Oracle GC Tuning Guide](https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/)
+- [JVM GC Algorithms](https://www.baeldung.com/jvm-garbage-collectors)
+- [G1 GC Deep Dive](https://www.oracle.com/technetwork/tutorials/tutorials-1876574.html)
 
-- [Oracle JVM GC Tuning Guide](https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/)
-- [G1 Garbage Collector](https://docs.oracle.com/javase/9/gctuning/garbage-first-garbage-collector.htm)
-- [Z Garbage Collector](https://docs.oracle.com/en/java/javase/11/gctuning/z-garbage-collector.html)
-- [Shenandoah GC](https://wiki.openjdk.java.net/display/shenandoah/Main)
+## Github-README Links & Related Topics
 
-# Github-README Links & Related Topics
-
-- [JVM Internals and Class Loading](./jvm-internals-and-class-loading/README.md)
-- [GC Tuning](./gc-tuning/README.md)
-- [Java Memory Management](./java-memory-management/README.md)
-- [Performance Optimization Techniques](./performance-optimization-techniques/README.md)
+- [jvm-internals-and-class-loading/README.md](../jvm-internals-and-class-loading/README.md)
+- [gc-tuning/README.md](../gc-tuning/README.md)
+- [java-memory-model-and-concurrency/README.md](../java/java-memory-model-and-concurrency/README.md)
